syntax = "proto3";
package kopi.denominations;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/kopi-money/kopi/x/denominations/types";

message ReferenceFactor {
  string denom = 1;

  bytes factor = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message DexDenom {
  string name = 1;
  uint64 exponent = 2;

  ReferenceFactor reference_factor = 3;

  bytes min_liquidity = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  bytes min_order_size = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

message KCoin {
  string dex_denom = 1;

  repeated string references = 2;

  bytes max_supply = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  bytes max_mint_amount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  bytes max_burn_amount = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

message ArbitrageDenom {
  string dex_denom = 1;
  string k_coin = 2;
  string c_asset = 3;

  bytes buy_threshold = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  bytes sell_threshold = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  bytes buy_trade_amount = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  bytes sell_trade_amount = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  bytes redemption_fee = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  bytes redemption_fee_reserve_share = 9 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message CollateralDenom {
  string dex_denom = 1;

  bytes ltv = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  bytes max_deposit = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

message CAsset {
  string dex_denom = 1;
  string base_dex_denom = 2;

  bytes dex_fee_share = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  bytes borrow_limit = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  bytes minimum_loan_size = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

message StrategyDenoms {
  repeated ArbitrageDenom arbitrage_denoms = 5;
}

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  repeated DexDenom dex_denoms = 1;
  repeated KCoin k_coins = 2;
  repeated CAsset c_assets = 3;
  repeated CollateralDenom collateral_denoms = 4;
  StrategyDenoms strategy_denoms = 5;
}